Fixed the image aspect ratio on mobile devices and add submit button for comment form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,6 +56,11 @@ nav {
     width: 30px;
 }
 
+.image {
+    width: 100%;
+    height: auto;
+}
+
 /* Profile section */
 
 .card-feed {
